<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description_image"
        android:scaleType="centerCrop"
        android:src="@drawable/calc01" />

    <Button
        style="@style/CalcKey.ThemeSelect"
        android:id="@+id/buttonSwitch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:onClick="buttonClick"
        android:text="@string/key_swith"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        style="@style/CalcKey"
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:onClick="buttonClick"
        android:text="@string/key_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        style="@style/CalcKey"
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_1"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        style="@style/CalcKey"
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_4"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintStart_toStartOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        style="@style/CalcKey"
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_7"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/buttonC"
        app:layout_constraintStart_toStartOf="@id/buttonC"
        app:layout_constraintTop_toBottomOf="@+id/buttonC" />


    <com.google.android.material.button.MaterialButton
        style="@style/CalcKey.C"
        app:rippleColor="@color/black"
        android:id="@+id/buttonC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_c"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/buttonCE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLED" />

    <Button
        style="@style/CalcKey.Operation"
        android:id="@+id/buttonDiff"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_Diff"
        app:layout_constraintBottom_toTopOf="@+id/buttonSum"
        app:layout_constraintEnd_toEndOf="@+id/buttonMul"
        app:layout_constraintStart_toStartOf="@id/buttonMul"
        app:layout_constraintTop_toBottomOf="@+id/buttonMul" />


    <Button
        style="@style/CalcKey"
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_9"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="@+id/buttonSq"
        app:layout_constraintStart_toStartOf="@id/buttonSq"
        app:layout_constraintTop_toBottomOf="@+id/buttonSq" />


    <Button
        style="@style/CalcKey.Operation"
        android:id="@+id/buttonMul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_x"
        app:layout_constraintBottom_toTopOf="@+id/buttonDiff"
        app:layout_constraintEnd_toEndOf="@+id/buttonDiv"
        app:layout_constraintStart_toStartOf="@id/buttonDiv"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiv" />

    <Button
        style="@style/CalcKey.CE"
        android:id="@+id/buttonCE"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="4dp"
        android:onClick="buttonClick"
        android:text="@string/key_del"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/buttonSq"
        app:layout_constraintStart_toEndOf="@+id/buttonC"
        app:layout_constraintTop_toBottomOf="@+id/textViewLED" />

    <Button
        style="@style/CalcKey"
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_3"
        app:layout_constraintBottom_toTopOf="@+id/buttonSwitch"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        style="@style/CalcKey"
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_6"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button9"
        app:layout_constraintStart_toStartOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        style="@style/CalcKey"
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_8"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/buttonCE"
        app:layout_constraintStart_toStartOf="@id/buttonCE"
        app:layout_constraintTop_toBottomOf="@+id/buttonCE" />

    <Button
        style="@style/CalcKey"
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_5"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button8" />


    <Button
        style="@style/CalcKey.Itog"
        android:id="@+id/buttonItog"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:onClick="buttonClick"
        android:text="@string/key_Itog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/buttonSum"
        app:layout_constraintStart_toStartOf="@id/buttonSum"
        app:layout_constraintTop_toBottomOf="@+id/buttonSum" />

    <Button
        style="@style/CalcKey"
        android:id="@+id/buttonDot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/big_margin"
        android:onClick="buttonClick"
        android:text="@string/key_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        style="@style/CalcKey.Operation"
        android:id="@+id/buttonSum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_Summ"
        app:layout_constraintBottom_toTopOf="@+id/buttonItog"
        app:layout_constraintEnd_toEndOf="@+id/buttonDiff"
        app:layout_constraintStart_toStartOf="@id/buttonDiff"
        app:layout_constraintTop_toBottomOf="@+id/buttonDiff" />

    <Button
        android:id="@+id/buttonSq"
        style="@style/CalcKey.Operation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:enabled="false"
        android:onClick="buttonClick"
        android:text="@string/key_sq"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/buttonDiv"
        app:layout_constraintStart_toEndOf="@+id/buttonCE"
        app:layout_constraintTop_toBottomOf="@+id/textViewLED" />

    <Button
        style="@style/CalcKey.Operation"
        android:id="@+id/buttonDiv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/medium_margin"
        android:layout_marginBottom="4dp"
        android:onClick="buttonClick"
        android:text="@string/key_Div"
        app:layout_constraintBottom_toTopOf="@+id/buttonMul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSq"
        app:layout_constraintTop_toBottomOf="@+id/textViewLED" />

    <Button
        style="@style/CalcKey"
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:onClick="buttonClick"
        android:text="@string/key_2"
        app:layout_constraintBottom_toTopOf="@+id/buttonDot"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />


    <TextView
        android:id="@+id/textViewLED"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/medium_margin"
        android:background="@color/led"
        android:fontFamily="@font/calc_font"
        android:onClick="buttonClick"
        android:text="@string/key_LED"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>